--- a/css/index.css
+++ b/css/index.css
@@ -170,3 +170,40 @@ header {
 .video {
   height: 100%;
 }
+
+
+.nosotros{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(90deg, #fd96b3, #f92b93);
+  heigth: 85vh;
+  padding: 5% 2%;
+}
+
+.nosotros-texto{
+  padding-left: 60px;
+  padding-right: 60px;
+
+}
+.nosotros-texto h1{
+  font-size: 60px;
+  font-weight: 900;
+  text-align: center;
+
+  margin-bottom: 30px;
+  
+}
+.nosotros-texto p{
+  font-size: 23px;
+  font-weight: 600;
+  padding-top: 38px;
+  text-align: left;
+  line-height: 28px;
+
+}
+
+.nosotros-imagen{
+  padding-left: 3%;
+
+}
