--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@ azul: rgb(7, 108, 178) */
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -360,9 +361,6 @@ header {
   font-size: 19px;
   text-transform: capitalize;
   padding-top: 10px;
-}
-
-.icon-clima {
 }
 
 /* FOOTER */
